fixed width for listOfMusicians on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
   }
   .items {
     margin-left: 140px;
-    max-width: 340px;
+    max-width: 285px;
   }
 }
 
